# pifan

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pifan.service.in  setup-vscode  version.h.in
.github/workflows/: audit.yml  build.yml  cd.yml  ci.yml  release.yml  security.yml
cmake/: FindGPIOD.cmake
debian/: postinst  prerm
resources/: pifan.service
src/: gpio.c  gpio.h  main.c  pidfile.c  pidfile.h  pifan.c  pifan.h  thermal.c  thermal.h
